--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ A <strong>spa in Beverly Hills</strong> represents quality, professionalism, and
     <li>Personalized consultations and care plans</li>
     <li>A relaxing, upscale environment</li>
 </ul>
+<a href="https://damianpap.codeberg.page/Injectablesinbeverlyhills/" target="_blank" rel="noopener noreferrer">Injectables in Beverly Hills</a>
 
 <p>
 When you invest in self-care at a Beverly Hills spa, you invest in long-term beauty and confidence.
